--- a/components/Main/main.module.css
+++ b/components/Main/main.module.css
@@ -44,15 +44,16 @@
 
 .issueList {
   margin-top: 2rem;
-  width: 80%;
+  width: 50%;
   border: 2px solid rgb(84, 123, 160);
   border-radius: 10px;
-  padding-top: 1rem;
+  padding-bottom: 1rem;
+  /* padding-bottom: 1rem; */
   /* padding: 1rem; */
 }
 
 .emptyCard {
-  padding: 0 1rem 1rem 1rem;
+  padding: 1rem 1rem 0 1rem;
 }
 
 .emptyCard > div {
